Bug fixes to contact page
Container alignment of top is causing overlap between two containers leading to display errors.

--- a/contactPage.css
+++ b/contactPage.css
@@ -187,6 +187,18 @@ h2 {
     border-radius: 10px;
 }
 
+#container-1 {
+    position: absolute;
+    top: 10%;
+    left: 19%;
+}
+
+#container-2 {
+    position: absolute;
+    top: 95%;
+    left: 19%;
+}
+
 .container h3 {
     color: white;
     font-style: italic;
@@ -286,8 +298,9 @@ h2 {
 
 footer {
     margin-top: 40px;
-    position: flex;
-    bottom: 0;
+    position: absolute;
+
+    top: 138%;
     width: 100%;
     height: 60px;
     background-color: #000000;
